Fixed issue where social icons were being covered and it's now showing and adjusted social icons

--- a/src/NavBarScrolling/NavBarScrolling.css
+++ b/src/NavBarScrolling/NavBarScrolling.css
@@ -72,11 +72,6 @@
     display: inline;
 }
 
-/* Hovering over Mobile Nav. Bar will show a different color */
-.mobile-navbar li:hover {
-    background-color: lightgrey;
-}
-
 /* When the user is on mobile
             or
     decreases width of website,
